// Vitest Snapshot v1

exports[`Result > Result customVue demo works fine 1`] = `
<div
  class="t-result t-result--theme-default"
>
  <div
    class="t-result__thumb"
  >
    
    <div
      class="t-image t-image--square external-class-image"
    >
      <div
        class="t-image__mask"
      >
        <div
          class="t-loading"
          style="font-size: 20px;"
        >
          <div
            class="t-loading__dots"
            style="animation-duration: 800ms; width: 20px; height: 20px;"
          >
            
            <div
              class="t-loading__dot"
              style="animation-duration: 0.8s; animation-delay: 0s;"
            />
            <div
              class="t-loading__dot"
              style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
            />
            <div
              class="t-loading__dot"
              style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
            />
            
          </div>
          <!---->
          <!---->
        </div>
      </div>
      <picture>
        <!--v-if-->
        <img
          alt=""
          class="t-image__img"
          src="https://tdesign.gtimg.com/mobile/demos/result1.png"
          style="object-fit: fill; object-position: center;"
        />
      </picture>
    </div>
    
  </div>
  <div
    class="t-result__title"
  >
    
    <div>
      自定义结果
    </div>
    
  </div>
  <div
    class="t-result__description"
  >
    
    <div>
      描述文字
    </div>
    
  </div>
</div>
`;

exports[`Result > Result mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-772b64ec=""
>
  <h1
    class="title"
    data-v-772b64ec=""
  >
    Result 结果
  </h1>
  <p
    class="summary"
    data-v-772b64ec=""
  >
    结果反馈
  </p>
  <div
    class="tdesign-mobile-demo-block"
    data-v-772b64ec=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 类型
      </h2>
      <!--v-if-->
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-772b64ec=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        不同结果状态
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div>
        <div
          class="t-result t-result--theme-success space"
        >
          <div
            class="t-result__thumb"
          >
            <svg
              class="t-icon t-icon-check-circle t-result__icon"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M12 21a9 9 0 100-18 9 9 0 000 18zm11-9a11 11 0 11-22 0 11 11 0 0122 0zm-12.5 4.41L6.09 12l1.41-1.41 3 3 6-6L17.91 9l-7.41 7.41z"
                fill="currentColor"
              />
            </svg>
          </div>
          <div
            class="t-result__title"
          >
            成功状态
          </div>
          <div
            class="t-result__description"
          >
            描述文字
          </div>
        </div>
      </div>
      <div>
        <div
          class="t-result t-result--theme-error space"
        >
          <div
            class="t-result__thumb"
          >
            <svg
              class="t-icon t-icon-close-circle t-result__icon"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M12 21a9 9 0 100-18 9 9 0 000 18zm11-9a11 11 0 11-22 0 11 11 0 0122 0zM7.4 15.18L10.6 12 7.4 8.82 8.82 7.4 12 10.6l3.18-3.19 1.42 1.42L13.4 12l3.19 3.18-1.42 1.42L12 13.4 8.82 16.6 7.4 15.18z"
                fill="currentColor"
              />
            </svg>
          </div>
          <div
            class="t-result__title"
          >
            失败状态
          </div>
          <div
            class="t-result__description"
          >
            描述文字
          </div>
        </div>
      </div>
      <div>
        <div
          class="t-result t-result--theme-warning space"
        >
          <div
            class="t-result__thumb"
          >
            <svg
              class="t-icon t-icon-info-circle t-result__icon"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M12 21a9 9 0 100-18 9 9 0 000 18zm11-9a11 11 0 11-22 0 11 11 0 0122 0zm-12 5.5V10h2v7.5h-2zm2-9h-2v-2h2v2z"
                fill="currentColor"
              />
            </svg>
          </div>
          <div
            class="t-result__title"
          >
            警示状态
          </div>
          <div
            class="t-result__description"
          >
            描述文字
          </div>
        </div>
      </div>
      <div>
        <div
          class="t-result t-result--theme-default space"
        >
          <div
            class="t-result__thumb"
          >
            <svg
              class="t-icon t-icon-info-circle t-result__icon"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M12 21a9 9 0 100-18 9 9 0 000 18zm11-9a11 11 0 11-22 0 11 11 0 0122 0zm-12 5.5V10h2v7.5h-2zm2-9h-2v-2h2v2z"
                fill="currentColor"
              />
            </svg>
          </div>
          <div
            class="t-result__title"
          >
            默认状态
          </div>
          <div
            class="t-result__description"
          >
            描述文字
          </div>
        </div>
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-772b64ec=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        自定义结果
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-result t-result--theme-default"
        data-v-772b64ec=""
      >
        <div
          class="t-result__thumb"
        >
          
          <div
            class="t-image t-image--square external-class-image"
          >
            <div
              class="t-image__mask"
            >
              <div
                class="t-loading"
                style="font-size: 20px;"
              >
                <div
                  class="t-loading__dots"
                  style="animation-duration: 800ms; width: 20px; height: 20px;"
                >
                  
                  <div
                    class="t-loading__dot"
                    style="animation-duration: 0.8s; animation-delay: 0s;"
                  />
                  <div
                    class="t-loading__dot"
                    style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                  />
                  <div
                    class="t-loading__dot"
                    style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                  />
                  
                </div>
                <!---->
                <!---->
              </div>
            </div>
            <picture>
              <!--v-if-->
              <img
                alt=""
                class="t-image__img"
                src="https://tdesign.gtimg.com/mobile/demos/result1.png"
                style="object-fit: fill; object-position: center;"
              />
            </picture>
          </div>
          
        </div>
        <div
          class="t-result__title"
        >
          
          <div>
            自定义结果
          </div>
          
        </div>
        <div
          class="t-result__description"
        >
          
          <div>
            描述文字
          </div>
          
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-772b64ec=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        页面位置展示
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="padding"
        data-v-772b64ec=""
      >
        <button
          aria-disabled="false"
          class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
          data-v-772b64ec=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
             页面位置展示 
            
          </span>
          <!---->
        </button>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Result > Result themeVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div>
    <div
      class="t-result t-result--theme-success space"
    >
      <div
        class="t-result__thumb"
      >
        <svg
          class="t-icon t-icon-check-circle t-result__icon"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M12 21a9 9 0 100-18 9 9 0 000 18zm11-9a11 11 0 11-22 0 11 11 0 0122 0zm-12.5 4.41L6.09 12l1.41-1.41 3 3 6-6L17.91 9l-7.41 7.41z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="t-result__title"
      >
        成功状态
      </div>
      <div
        class="t-result__description"
      >
        描述文字
      </div>
    </div>
  </div>
  <div>
    <div
      class="t-result t-result--theme-error space"
    >
      <div
        class="t-result__thumb"
      >
        <svg
          class="t-icon t-icon-close-circle t-result__icon"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M12 21a9 9 0 100-18 9 9 0 000 18zm11-9a11 11 0 11-22 0 11 11 0 0122 0zM7.4 15.18L10.6 12 7.4 8.82 8.82 7.4 12 10.6l3.18-3.19 1.42 1.42L13.4 12l3.19 3.18-1.42 1.42L12 13.4 8.82 16.6 7.4 15.18z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="t-result__title"
      >
        失败状态
      </div>
      <div
        class="t-result__description"
      >
        描述文字
      </div>
    </div>
  </div>
  <div>
    <div
      class="t-result t-result--theme-warning space"
    >
      <div
        class="t-result__thumb"
      >
        <svg
          class="t-icon t-icon-info-circle t-result__icon"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M12 21a9 9 0 100-18 9 9 0 000 18zm11-9a11 11 0 11-22 0 11 11 0 0122 0zm-12 5.5V10h2v7.5h-2zm2-9h-2v-2h2v2z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="t-result__title"
      >
        警示状态
      </div>
      <div
        class="t-result__description"
      >
        描述文字
      </div>
    </div>
  </div>
  <div>
    <div
      class="t-result t-result--theme-default space"
    >
      <div
        class="t-result__thumb"
      >
        <svg
          class="t-icon t-icon-info-circle t-result__icon"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M12 21a9 9 0 100-18 9 9 0 000 18zm11-9a11 11 0 11-22 0 11 11 0 0122 0zm-12 5.5V10h2v7.5h-2zm2-9h-2v-2h2v2z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="t-result__title"
      >
        默认状态
      </div>
      <div
        class="t-result__description"
      >
        描述文字
      </div>
    </div>
  </div>
  
</div>
`;
